--- a/index.html
+++ b/index.html
@@ -1,1 +1,250 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Vara Kumar Elder Care | Narapally, Hyderabad</title>
+
+  <!-- Primary SEO -->
+  <meta name="description" content="Trusted elder care & daily assistance in Narapally, Hyderabad. Owned by Vara Kumar from Vitteleswara Colony, Chowdariguda. Call +91 91648 78611." />
+  <link rel="canonical" href="https://example.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Vara Kumar Elder Care | Narapally, Hyderabad" />
+  <meta property="og:description" content="Compassionate caretaker service for older people in Narapally. Daily assistance, companionship, medication reminders, and more." />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicons (optional)
+  <link rel="icon" href="favicon.ico" />
+  -->
+
+  <style>
+    :root{
+      --bg:#ffffff;
+      --text:#1c1c1c;
+      --muted:#5b5b5b;
+      --brand:#c92a2a;          /* warm red */
+      --brand-50:#fff5f5;       /* very light red */
+      --card:#ffffff;
+      --shadow:0 10px 25px rgba(0,0,0,.06);
+      --radius:16px;
+      --max:1120px;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.5}
+    a{color:var(--brand);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:var(--max);margin-inline:auto;padding:0 1rem}
+    header{
+      position:sticky;top:0;z-index:20;background:rgba(255,255,255,.9);backdrop-filter:saturate(180%) blur(6px);
+      border-bottom:1px solid #eee;
+    }
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:.85rem 0;gap:.75rem}
+    .brand{display:flex;align-items:center;gap:.75rem}
+    .logo{
+      width:42px;height:42px;border-radius:10px;background:linear-gradient(135deg,var(--brand),#ff6868);
+      box-shadow:0 6px 16px rgba(201,42,42,.35);
+    }
+    .brand h1{font-size:1.05rem;margin:0}
+    .cta{display:flex;gap:.5rem;flex-wrap:wrap}
+    .btn{
+      display:inline-flex;align-items:center;gap:.5rem;
+      background:var(--brand);color:#fff;border:none;padding:.65rem .95rem;border-radius:12px;
+      box-shadow:0 10px 18px rgba(201,42,42,.22);font-weight:600;cursor:pointer
+    }
+    .btn.alt{background:#fff;color:var(--brand);border:1px solid var(--brand);}
+    .btn:active{transform:translateY(1px)}
+
+    .hero{
+      padding:2.2rem 0 1.6rem;background:
+        radial-gradient(1200px 500px at 10% -20%, var(--brand-50), transparent 50%);
+    }
+    .hero-grid{display:grid;gap:1.25rem;grid-template-columns:1fr;align-items:center}
+    .hero h2{font-size:2rem;line-height:1.15;margin:.2rem 0}
+    .hero p{color:var(--muted);margin:0 0 1rem}
+    .badge{display:inline-block;background:var(--brand-50);color:var(--brand);font-weight:700;border-radius:999px;padding:.35rem .7rem;border:1px solid #ffd2d2}
+    .hero-card{
+      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:1rem
+    }
+    .grid{
+      display:grid;gap:1rem;grid-template-columns:1fr;align-items:stretch
+    }
+    .card{
+      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:1rem
+    }
+    .card h3{margin:.1rem 0 .4rem}
+    .list{margin:.2rem 0 0;padding:0 0 0 1.1rem}
+    .list li{margin:.3rem 0}
+    .two{display:grid;gap:1rem}
+    .kpis{display:grid;grid-template-columns:repeat(2,1fr);gap:.75rem}
+    .kpi{background:var(--brand-50);border:1px solid #ffd2d2;border-radius:12px;padding:.75rem;text-align:center}
+    .kpi b{display:block;font-size:1.1rem;color:var(--brand)}
+    .gallery{display:grid;gap:.75rem;grid-template-columns:repeat(3,1fr)}
+    .gallery figure{margin:0;background:#f7f7f7;border:1px solid #eee;border-radius:12px;overflow:hidden;aspect-ratio:4/3;display:flex;align-items:center;justify-content:center}
+    .gallery img{width:100%;height:100%;object-fit:cover}
+    .about{display:grid;gap:1rem}
+    .contact{
+      display:grid;gap:1rem;background:var(--brand-50);border:1px solid #ffd2d2;border-radius:var(--radius);padding:1rem
+    }
+    footer{margin-top:2rem;border-top:1px solid #eee}
+    .foot{padding:1rem 0;color:var(--muted);display:flex;flex-wrap:wrap;gap:.75rem;justify-content:space-between}
+
+    /* Responsive */
+    @media(min-width:720px){
+      .hero-grid{grid-template-columns:1.3fr .9fr}
+      .grid{grid-template-columns:repeat(3,1fr)}
+      .two{grid-template-columns:1.2fr 1fr}
+      .about{grid-template-columns:1fr 1fr}
+    }
+  </style>
+
+  <!-- LocalBusiness Schema -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"HomeAndConstructionBusiness",
+    "name":"Vara Kumar Elder Care",
+    "image":"https://example.com/og-image.jpg",
+    "description":"Elder caretaker services in Narapally, Hyderabad. Daily assistance, companionship, and medication reminders.",
+    "areaServed":{"@type":"Place","name":"Narapally, Hyderabad"},
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"Vitteleswara Colony, Chowdariguda, Narapally",
+      "addressLocality":"Hyderabad",
+      "addressRegion":"Telangana",
+      "addressCountry":"IN"
+    },
+    "telephone":"+919164878611",
+    "owner":{"@type":"Person","name":"Vara Kumar"}
+  }
+  </script>
+</head>
+<body>
+
+  <header>
+    <div class="wrap nav">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <h1>Vara Kumar Elder Care</h1>
+      </div>
+      <div class="cta">
+        <a class="btn alt" href="tel:+919164878611" aria-label="Call Vara Kumar">Call: +91 91648 78611</a>
+        <a class="btn" href="https://wa.me/919164878611" target="_blank" rel="noopener">WhatsApp</a>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-card">
+          <span class="badge">Hyderabad • Narapally Area</span>
+          <h2>Compassionate Care for Older People</h2>
+          <p>Friendly, reliable caretaker services focused on dignity, comfort, and daily well-being — right in Narapally.</p>
+          <div class="kpis">
+            <div class="kpi"><b>Daily Assistance</b><small>Bathing • Meals • Walks</small></div>
+            <div class="kpi"><b>Medication</b><small>Reminders & Tracking</small></div>
+          </div>
+          <div style="margin-top:1rem;display:flex;gap:.6rem;flex-wrap:wrap">
+            <a class="btn" href="tel:+919164878611">Book a Visit</a>
+            <a class="btn alt" href="#services">View Services</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3 style="margin-top:.2rem">Gallery (add your images)</h3>
+          <p class="muted" style="color:var(--muted);margin-top:.25rem">Replace the images below with 2–3 happy elder photos.</p>
+          <div class="gallery" aria-label="Photo gallery">
+            <!-- Replace these src values with your own image paths -->
+            <figure><img src="images/elder-1.jpg" alt="Smiling elderly person"/></figure>
+            <figure><img src="images/elder-2.jpg" alt="Friendly caretaker with elder"/></figure>
+            <figure><img src="images/elder-3.jpg" alt="Happy senior enjoying a walk"/></figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section id="services" class="wrap" style="margin-top:1.2rem">
+      <div class="grid">
+        <article class="card">
+          <h3>Daily Care & Support</h3>
+          <ul class="list">
+            <li>Assistance with bathing, grooming & dressing</li>
+            <li>Meal preparation & feeding support</li>
+            <li>Companionship, conversations & light activities</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Health & Safety</h3>
+          <ul class="list">
+            <li>Medication reminders (non-medical)</li>
+            <li>Gentle exercises & supervised walks</li>
+            <li>Routine monitoring & family updates</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Home Assistance</h3>
+          <ul class="list">
+            <li>Light housekeeping around living areas</li>
+            <li>Errands within nearby locality</li>
+            <li>Flexible daytime schedules</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <!-- About & Contact -->
+    <section class="wrap two" style="margin-top:1.2rem">
+      <article class="card about">
+        <div>
+          <h3>About the Owner</h3>
+          <p><b>Vara Kumar</b> — local resident from <b>Vitteleswara Colony, Chowdariguda, Narapally</b>. I provide respectful, patient, and trustworthy care for elders, with clear communication for families.</p>
+          <p style="color:var(--muted)">Service area: Narapally & nearby localities in Hyderabad.</p>
+        </div>
+        <div>
+          <h3>Why Families Choose Us</h3>
+          <ul class="list">
+            <li>Kind, reliable, and punctual caretaker support</li>
+            <li>Clear updates to family members</li>
+            <li>Simple pricing & flexible timings</li>
+          </ul>
+        </div>
+      </article>
+
+      <aside class="contact">
+        <div>
+          <h3>Contact</h3>
+          <p style="margin:.25rem 0 0"><b>Phone:</b> <a href="tel:+919164878611">+91 91648 78611</a></p>
+          <p style="margin:.25rem 0 0"><b>WhatsApp:</b> <a href="https://wa.me/919164878611" target="_blank" rel="noopener">Chat now</a></p>
+          <p style="margin:.25rem 0 0"><b>Location:</b> Vitteleswara Colony, Chowdariguda, Narapally, Hyderabad</p>
+        </div>
+        <div>
+          <h3>Availability</h3>
+          <ul class="list" style="margin-top:.25rem">
+            <li>Daytime support (Mon–Sat)</li>
+            <li>Short visits or half-day/full-day</li>
+            <li>Emergency visits (on request)</li>
+          </ul>
+        </div>
+        <!-- Optional: link to a map (no embed needed) -->
+        <a class="btn" href="https://maps.app.goo.gl/" target="_blank" rel="noopener">Open in Google Maps</a>
+      </aside>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap foot">
+      <small>© <span id="yr"></span> Vara Kumar Elder Care — Narapally, Hyderabad</small>
+      <small>Designed for mobile • White & red theme</small>
+    </div>
+  </footer>
+
+  <script>
+    // auto year
+    document.getElementById('yr').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
 
