--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
           <p class="muted" style="color:var(--muted);margin-top:.25rem">Replace the images below with 2–3 happy elder photos.</p>
           <div class="gallery" aria-label="Photo gallery">
             <!-- Replace these src values with your own image paths -->
-            <figure><img src="images/elder-1.jpg" alt="Smiling elderly person"/></figure>
-            <figure><img src="images/elder-2.jpg" alt="Friendly caretaker with elder"/></figure>
-            <figure><img src="images/elder-3.jpg" alt="Happy senior enjoying a walk"/></figure>
+            <figure><img src="elder-1.jpg" alt="Smiling elderly person"/></figure>
+            <figure><img src="elder-2.jpg" alt="Friendly caretaker with elder"/></figure>
+            <figure><img src="elder-3.jpg" alt="Happy senior enjoying a walk"/></figure>
           </div>
         </div>
       </div>
