--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
 
         <div class="card">
           <h3 style="margin-top:.2rem">Gallery (add your images)</h3>
-          <p class="muted" style="color:var(--muted);margin-top:.25rem">Replace the images below with 2–3 happy elder photos.</p>
+          <p class="muted" style="color:var(--muted);margin-top:.25rem"></p>
           <div class="gallery" aria-label="Photo gallery">
-            <!-- Replace these src values with your own image paths -->
+            
             <figure><img src="elder-1.jpg" alt="Smiling elderly person"/></figure>
-            <figure><img src="elder-2.jpg" alt="Friendly caretaker with elder"/></figure>
-            <figure><img src="elder-3.jpg" alt="Happy senior enjoying a walk"/></figure>
+            <figure><img src="elder-2.jpeg" alt="Friendly caretaker with elder"/></figure>
+            <figure><img src="elder-3.jpeg" alt="Happy senior enjoying a walk"/></figure>
           </div>
         </div>
       </div>
@@ -229,7 +229,10 @@
           </ul>
         </div>
         <!-- Optional: link to a map (no embed needed) -->
-        <a class="btn" href="https://maps.app.goo.gl/" target="_blank" rel="noopener">Open in Google Maps</a>
+       <a class="btn" href="https://www.google.com/maps/place/VARA+KUMAR+B+NARAPALLY+HYDERABAD/@17.4061458,78.6654382,15z/data=!4m6!3m5!1s0x3bcb9f88811a2701:0xe6e9a7d28e0b2365!8m2!3d17.4089617!4d78.6556801!16s%2Fg%2F11rwsgfybt?entry=ttu&g_ep=EgoyMDI1MDkxMC4wIKXMDSoASAFQAw%3D%3D" 
+   target="_blank" rel="noopener">
+   📍 Open in Google Maps
+</a>
       </aside>
     </section>
   </main>
