--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="card">
-          <h3 style="margin-top:.2rem">Gallery (add your images)</h3>
+          <h3 style="margin-top:.2rem">Gallery</h3>
           <p class="muted" style="color:var(--muted);margin-top:.25rem"></p>
           <div class="gallery" aria-label="Photo gallery">
             
