--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Vara Kumar Elder Care | Narapally, Hyderabad</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="Trusted elder care & daily assistance in Narapally, Hyderabad. Owned by Vara Kumar from Vitteleswara Colony, Chowdariguda. Call +91 91648 78611." />
+  <meta name="description" content="Trusted elderly care & daily assistance in Narapally, Hyderabad. Owned by Vara Kumar from Vitteleswara Colony, Chowdariguda. Call +91 91648 78611." />
   <link rel="canonical" href="https://example.com/" />
 
   <!-- Open Graph -->
@@ -123,10 +123,10 @@
 
   <header>
     <div class="wrap nav">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <h1>Vara Kumar Elder Care</h1>
-      </div>
+<div class="brand">
+  <img src="images/eldercare-logo.png" alt="Elder Care EC Logo" class="logo-img" />
+  <h1>Vara Kumar Elder Care</h1>
+</div>
       <div class="cta">
         <a class="btn alt" href="tel:+919164878611" aria-label="Call Vara Kumar">Call: +91 91648 78611</a>
         <a class="btn" href="https://wa.me/919164878611" target="_blank" rel="noopener">WhatsApp</a>
@@ -240,7 +240,6 @@
   <footer>
     <div class="wrap foot">
       <small>© <span id="yr"></span> Vara Kumar Elder Care — Narapally, Hyderabad</small>
-      <small>Designed for mobile • White & red theme</small>
     </div>
   </footer>
 
