--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <header>
     <div class="wrap nav">
 <div class="brand">
-  <img src="images/eldercare-logo.png" alt="Elder Care EC Logo" class="logo-img" />
+  <img src="eldercare-logo.png" alt="Elder Care EC Logo" class="logo-img" />
   <h1>Vara Kumar Elder Care</h1>
 </div>
       <div class="cta">
