--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
       .about{grid-template-columns:1fr 1fr}
     }
   </style>
-
+.logo-img {
+  width: 42px;
+  height: 42px;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: 0 6px 16px rgba(201, 42, 42, .35);
+}
   <!-- LocalBusiness Schema -->
   <script type="application/ld+json">
   {
